[gd_scene load_steps=8 format=2]

[ext_resource path="res://PixelArt/Tilesets/hills_ramp.png" type="Texture" id=1]
[ext_resource path="res://Buildings/Hills/HillsRamp.gd" type="Script" id=2]
[ext_resource path="res://Overlap/AIDetector.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.4375, 12.7982 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 2.46143 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9.36089, 2.5937 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8.25, 15.1875 )

[node name="HillsRamp" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 1 )

[node name="RemoveCollision" type="Area2D" parent="."]
collision_mask = 288

[node name="CollisionShape2D" type="CollisionShape2D" parent="RemoveCollision"]
position = Vector2( -1.3125, -15.2018 )
shape = SubResource( 1 )

[node name="ZLow" type="Area2D" parent="."]
collision_mask = 288

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZLow"]
position = Vector2( -1.4313, -12.8022 )
shape = SubResource( 2 )

[node name="ZUp" type="Area2D" parent="."]
collision_mask = 288

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZUp"]
position = Vector2( -1.2876, -19.1445 )
shape = SubResource( 3 )

[node name="AIDetector" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AIDetector"]
position = Vector2( -1.375, -17.4375 )
shape = SubResource( 4 )

[connection signal="body_entered" from="RemoveCollision" to="." method="_on_RemoveCollision_body_entered"]
[connection signal="body_exited" from="RemoveCollision" to="." method="_on_RemoveCollision_body_exited"]
[connection signal="body_entered" from="ZLow" to="." method="_on_ZLow_body_entered"]
[connection signal="body_entered" from="ZUp" to="." method="_on_ZUp_body_entered"]
